--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
          <!-- THIRD CARD -->
          <div class="project-card">
           <div class="project-image">
-            <img src="photo/under-construction.jpg" alt="##" />
+            <a href="https://github.com/Brezel141/python_test" target="_blank" rel="noopener noreferrer"><img src="photo/pythonpic.jpg" alt="python_post" /></a>
           </div>
           <h3 class="project-name">
-            <a href="##"
-              >Under construction</a
+            <a href="https://github.com/Brezel141/python_test"
+              >Python tests</a
             >
           </h3>
         </div>
@@ -134,13 +134,13 @@
       <div class="contact-container-footer">
         <a
           class="info-links"
-          href="https://github.com/gael-src/"
+          href="https://github.com/Brezel141"
           target="_blank"
           >GitHub</a
         >
         <a
           class="info-links"
-          href="https://github.com/gael-src/gael-src.github.io"
+          href="https://github.com/Brezel141/my_website"
           >Code</a
         >
       </div>
