--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         I'm <a href="#about-id" class="name-intro">Manuel</a>, student in IT. Nice to
         e-meet you.
       </p>
-      <button class="project-button"><a href="#project">Projects</a></button>
+      <button class="project-button"><a href="#project-id">Projects</a></button>
     </main>
 
     <!-- PROJECT -->
@@ -87,10 +87,10 @@
          <!-- THIRD CARD -->
          <div class="project-card">
           <div class="project-image">
-            <a href="https://github.com/Brezel141/python_test" target="_blank" rel="noopener noreferrer"><img src="photo/pythonpic.jpg" alt="python_post" /></a>
+            <a href="https://github.com/Brezel141/python_test" target="_blank"><img src="photo/pythonpic.jpg" alt="python_post" /></a>
           </div>
           <h3 class="project-name">
-            <a href="https://github.com/Brezel141/python_test"
+            <a href="https://github.com/Brezel141/python_test" target="_blank"
               >Python tests</a
             >
           </h3>
@@ -99,11 +99,11 @@
          <!-- FORTH CARD -->
          <div class="project-card">
           <div class="project-image">
-            <img src="photo/under-construction.jpg" alt="##" />
+            <a href="https://github.com/Brezel141/php_test" target="_blank"><img src="photo/php_photo.jpg" alt="php_post" /></a>
           </div>
           <h3 class="project-name">
-            <a href="##"
-              >Under construction</a
+            <a href="https://github.com/Brezel141/php_test" target="_blank"
+              >PHP tests</a
             >
           </h3>
         </div>
@@ -141,6 +141,7 @@
         <a
           class="info-links"
           href="https://github.com/Brezel141/my_website"
+          target="_blank"
           >Code</a
         >
       </div>
