--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
          <!-- FORTH CARD -->
          <div class="project-card">
           <div class="project-image">
-            <a href="https://github.com/Brezel141/php_test" target="_blank"><img src="photo/php_photo.jpg" alt="php_post" /></a>
+            <a href="https://github.com/Brezel141/snake" target="_blank"><img src="photo/snake.jpg" alt="snake_logo" /></a>
           </div>
           <h3 class="project-name">
-            <a href="https://github.com/Brezel141/php_test" target="_blank"
-              >PHP tests</a
+            <a href="https://github.com/Brezel141/snake" target="_blank"
+              >Sanke game</a
             >
           </h3>
         </div>
