--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h2 class="undertitle">My Project</h2>
       <div class="project-grid">
 
-        <!-- FIRST CARD -->
+        <!-- CARD -->
         <div class="project-card">
           <div class="project-image">
             <a href="https://brezel141.github.io/my_first_project/ "  target="_blank"><img src="photo/floppy-pic.jpg" alt="floppy-pic" /></a>
@@ -72,31 +72,31 @@
           </h3>
         </div>
 
-        <!-- SECOND CARD -->
+        <!-- CARD -->
         <div class="project-card">
           <div class="project-image">
-            <a href="https://brezel141.github.io/tennis-game/"  target="_blank"><img src="photo/tennis-playground.jpg" alt="tennis-arcade" /></a>
+            <a href="https://github.com/Brezel141/100_days_of_code"  target="_blank"><img src="photo/glasspro.jpg" alt="computer-pic" /></a>
           </div>
           <h3 class="project-name">
-            <a href="https://brezel141.github.io/tennis-game/"  target="_blank"
-              >Tennis Arcade Game</a
+            <a href="https://github.com/Brezel141/100_days_of_code"  target="_blank"
+              >100 Day of code</a
             >
           </h3>
         </div>
 
-         <!-- THIRD CARD -->
-         <div class="project-card">
+        <!-- CARD -->
+        <div class="project-card">
           <div class="project-image">
-            <a href="https://github.com/Brezel141/python_test" target="_blank"><img src="photo/pythonpic.jpg" alt="python_post" /></a>
+            <a href="https://github.com/Brezel141/projects_course"  target="_blank"><img src="photo/pythonpic.jpg" alt="python-pic" /></a>
           </div>
           <h3 class="project-name">
-            <a href="https://github.com/Brezel141/python_test" target="_blank"
-              >Python tests</a
+            <a href="https://github.com/Brezel141/projects_course"  target="_blank"
+              >Project course</a
             >
           </h3>
         </div>
-
-         <!-- FORTH CARD -->
+        
+         <!-- CARD -->
          <div class="project-card">
           <div class="project-image">
             <a href="https://github.com/Brezel141/snake" target="_blank"><img src="photo/snake.jpg" alt="snake_logo" /></a>
@@ -104,6 +104,30 @@
           <h3 class="project-name">
             <a href="https://github.com/Brezel141/snake" target="_blank"
               >Sanke game</a
+            >
+          </h3>
+        </div>
+
+        <!-- CARD -->
+        <div class="project-card">
+          <div class="project-image">
+            <a href="https://github.com/Brezel141/to_do_app" target="_blank"><img src="photo/todo.jpg" alt="to-do-paper" /></a>
+          </div>
+          <h3 class="project-name">
+            <a href="https://github.com/Brezel141/to_do_app" target="_blank"
+              >To do App</a
+            >
+          </h3>
+        </div>
+
+        <!-- CARD -->
+        <div class="project-card">
+          <div class="project-image">
+            <a href="https://brezel141.github.io/tennis-game/"  target="_blank"><img src="photo/tennis-playground.jpg" alt="tennis-arcade" /></a>
+          </div>
+          <h3 class="project-name">
+            <a href="https://brezel141.github.io/tennis-game/"  target="_blank"
+              >Tennis Arcade Game</a
             >
           </h3>
         </div>
