--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
         <!-- CARD -->
         <div class="project-card">
           <div class="project-image">
+            <a href="https://play.unity.com/en/games/1d51cfc9-74e2-42b8-acf2-f9ecdd9f5d98/galaxyshooter"  target="_blank"><img src="photo/galaxy_shooter.jpg" alt="galaxy_shooter-pic" /></a>
+          </div>
+          <h3 class="project-name">
+            <a href="https://play.unity.com/en/games/1d51cfc9-74e2-42b8-acf2-f9ecdd9f5d98/galaxyshooter"  target="_blank"
+              >Galaxy Shooter</a
+            >
+          </h3>
+        </div>
+
+        <!-- CARD -->
+        <div class="project-card">
+          <div class="project-image">
             <a href="https://github.com/Brezel141/projects_course"  target="_blank"><img src="photo/pythonpic.jpg" alt="python-pic" /></a>
           </div>
           <h3 class="project-name">
