Enhanced text animation

--- a/index.html
+++ b/index.html
@@ -153,22 +153,16 @@
     </main>
 
     <!-- ABOUT -->
-    <main class="main-about" id="about-id">
-      <h3 class="about-title typing-text">About</h3>
+    <div class="main-about" id="about-id">
+      <h2 class="about-title">About</h2>
       <div class="about-wrapper">
         <h4 class="typing-text">Hello World!</h4>
-        <p class="typing-text">
-          I am Manuel, an IT student based in Berlin, passionate about development and AI.<br>While my journey in tech is just beginning, I'm excited about the possibilities<br>ahead.
-        </p>
-        <p class="typing-text">
-          My goal is to make my mark in the gaming industry,<br>though I'm open to exploring various opportunities in tech.<br>I believe in continuous learning and growth.
-        </p>
-        <p class="typing-text quote">
-          "In My Book, Experience Outranks Everything."
-        </p>
+        <p class="typing-text">I am Manuel, an IT student based in Berlin, passionate about development and AI.<br>While my journey in tech is just beginning, I'm excited about the possibilities<br>ahead.</p>
+        <p class="typing-text">My goal is to make my mark in the gaming industry,<br>though I'm open to exploring various opportunities in tech.<br>I believe in continuous learning and growth.</p>
+        <p class="typing-text quote">"In My Book, Experience Outranks Everything."</p>
         <p class="typing-text quote-author">-Captain Rex, 'The Clone Wars'</p>
       </div>
-    </main>
+    </div>
 
     <!-- FOOTER -->
     <footer class="footer-container" id="contact-id">
